--- a/CW ADP/.settings/org.eclipse.wst.common.component
+++ b/CW ADP/.settings/org.eclipse.wst.common.component
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
+            
+    
     <wb-module deploy-name="CW ADP">
-                
+                        
+        
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                
+                        
+        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
         <dependent-module archiveName="mysql-connector-j-8.0.32.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/xthas/Downloads/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar">
+                        
+            <dependency-type>uses</dependency-type>
+                    
+        </dependent-module>
+        <dependent-module archiveName="taglibs-standard-spec-1.2.5.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/xthas/Downloads/taglibs1.2.5_76f19f4d-f6b0-439b-9686-8d63ecdb31e4_93445_/taglibs-standard-spec-1.2.5.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-                
+        <dependent-module archiveName="taglibs-standard-impl-1.2.5.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/xthas/Downloads/taglibs1.2.5_76f19f4d-f6b0-439b-9686-8d63ecdb31e4_93445_/taglibs-standard-impl-1.2.5.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                        
+        
         <property name="context-root" value="CW_ADP"/>
-                
+                        
+        
         <property name="java-output-path" value="/CW ADP/build/classes"/>
-            
-    </wb-module>
+                    
     
+    </wb-module>
+        
+
 </project-modules>
