--- a/CW ADP/src/main/webapp/css/style.css
+++ b/CW ADP/src/main/webapp/css/style.css
@@ -9,7 +9,7 @@
     --white:#fff;
     --light-color:#666;
     --light-bg:#f5f5f5;
-    --border: .1rem solid var(--black);
+    --border: .1rem solid var(--purple);
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
 }
 
@@ -24,7 +24,7 @@
     transition: all .2s linear;
 }
 
-*::selection{
+/* *::selection{
     background-color: var(--purple);
     color: var(--white);
 }
@@ -41,9 +41,9 @@
 *::-webkit-scrollbar-thumb{
     background-color: var(--purple);
 }
-
+*/
 html{
-    font-size: 62.5%;
+    font-size: 60.5%;
     overflow-x: hidden;
 
 }
@@ -140,5 +140,178 @@ html{
     text-decoration: underline;
 }
 
+
 /* Register and Login CSS End */
 
+
+/* Header Home page*/
+
+.header .header-1{
+    background-color: var(--light-bg);
+}
+
+.header .header-1 .flex{
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.header .header-2{
+    background-color: var(--white);
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+}
+
+.header .header-2 .flex{
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.header .header-1 .flex .share a{
+    font-size: 2.5rem;
+    margin-right: 1.5rem;
+    color: var(--black);
+}
+
+.header .header-1 .flex .share a:hover{
+    color: var(--purple);
+}
+
+.header .header-1 .flex p{
+    font-size: 2rem;
+    color: var(--light-color);
+}
+
+.header .header-1 .flex p a{
+    color: var(--purple);
+}
+
+.header .header-1 .flex p a:hover{
+    text-decoration: underline;
+}
+
+.header .header-2 .flex .logo{
+    font-size: 2.5rem;
+    color: var(--purple);
+    font-weight: bolder;
+
+}
+
+.header .header-2 .flex .navbar a{
+    margin: 0 1rem;
+    font-size: 2rem;
+    color: var(--black);
+    font-weight: 600;
+}
+
+.header .header-2 .flex .navbar a:hover{
+    color: var(--purple);
+
+}
+
+.header .header-2 .flex .icons > *{
+    font-size: 2.5rem;
+    color: var(--black);
+    cursor: pointer;
+    margin-left: 1.5rem;
+}
+
+.header .header-2 .flex .icons > *:hover{
+    color: var(--purple);
+}
+
+#menu-btn{
+    display: none;
+}
+
+.header .header-2 .flex .user-box{
+    position: absolute;
+    top: 120%; right: 2rem;
+    width: 30rem;
+    box-shadow: var(--box-shadow);
+    border-radius: .5rem;
+    padding: 2rem;
+    text-align: center;
+    border: var(--border);
+    background-color: var(--white);
+    display: none;
+    animation: fadeIn .2s linear;
+}
+
+.header .header-2 .flex .user-box.active{
+    display: inline-block;
+}
+
+.header .header-2 .flex .user-box p{
+    font-size: 2rem;
+    color: var(--light-color);
+    margin-bottom: 1.5rem;
+}
+
+.header .header-2 .flex .user-box p span{
+    color: var(--purple);
+}
+
+.header .header-2 .flex .user-box .delete-btn{
+    margin-top: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:991px){
+    
+    html{
+        font-size: 55%;
+    }
+
+}
+
+@media (max-width:768px) {
+    
+    .header .header-2 .navbar{
+        position: absolute;
+        top: 99%; left: 0; right: 0;
+        background-color: var(--white);
+        border-top: var(--border);
+        border-bottom: var(--border);
+        clip-path: polygon(0 0,100% 0,100% 0,0 0);
+    }
+
+    .header .header-2 .flex .navbar a{
+        display: block;
+        margin: 2rem;
+        font-size: 2.5rem;
+    }
+
+    .header .header-2 .flex .navbar.active{
+        clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
+    }
+
+    #menu-btn{
+        display: inline-block;
+    }
+
+}
+
+@media (max-width:450px){
+
+    html{
+        font-size: 50%;
+    }
+}
