--- a/CW ADP/src/main/webapp/css/style.css
+++ b/CW ADP/src/main/webapp/css/style.css
@@ -722,8 +722,11 @@ html{
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
+	justify-content: center;
 	gap: 1.5rem;
+	
 }
+
 
 .placed-orders .box-container .box{
 	flex: 1 1 40rem;
@@ -743,10 +746,6 @@ html{
 .placed-orders .box-container .box p span{
 	color: var(--purple);
 }
-
-
-
-.placed-orders .box-container .box
 
 
 
