--- a/CW ADP/src/main/webapp/css/admin_style.css
+++ b/CW ADP/src/main/webapp/css/admin_style.css
@@ -355,25 +355,38 @@ section{
 /* Order */
 
 .orders .box-container{
-    display: grid;
+    /*display: grid;
     grid-template-columns: repeat(auto-fit, 50rem);
     justify-content: center;
     gap: 1.5rem;
     max-width: 1200px;
     margin: 1rem auto;
-    align-items: flex-start;
+    align-items: flex-start; */
+    max-width: 1200px;
+	margin: 2rem auto;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	gap: 1.5rem;
 }
 
 .orders .box-container .box{
-	background-color: var(--white);
+	/*background-color: var(--white);
 	padding: 2rem;
 	border: var(--border);
 	box-shadow: var(--box-shadow);
+	border-radius: .5rem;*/
+	flex: 1 1 40rem;
 	border-radius: .5rem;
+	padding: 2rem;
+	border: var(--border);
+	background-color: var(--light-bg);
+	padding: 1rem 2rem;
 }
 
 .orders .box-container .box p{
-	padding-bottom: 1rem;
+	padding: 1rem 0;
 	font-size: 2rem;
 	color: var(--light-color);
 }
